feat(Header): initial Header implementation

--- a/src/components/_settings/_variables.scss
+++ b/src/components/_settings/_variables.scss
@@ -10,6 +10,8 @@ $grey-3: #dadada;
 $grey-4: #ededed;
 $success: #2a7e2e;
 $wait: #fff8dd;
+$white: #fff;
+$dark: #000;
 $color-type-body: $grey-1;
 
 /*
@@ -17,4 +19,5 @@ $color-type-body: $grey-1;
 */
 $base-font-family: sans-serif;
 $base-font-lineheight: 1.5em;
+$base-font-size: 1.5em;
 $headers-font-family: serif;
