--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -1,8 +1,16 @@
 @import '../../_settings/variables';
 
 .header {
-    padding: 20px;
+    display: flex;
     height: 50px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+.themeToggler {
+    align-items: center;
+    display: flex;
 }
 
 .light {
