feat(header): add settings menu

--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -9,6 +9,10 @@
     padding: 20px;
 }
 
+.settingsIcon {
+    cursor: pointer;
+}
+
 .themeToggler {
     align-items: center;
     display: flex;
@@ -18,6 +22,14 @@
     background-color: $white;
 }
 
+.light.tip {
+    background-color: $grey-3;
+}
+
 .dark {
     background-color: $dark;
+}
+
+.dark.tip {
+    background-color: $brand;
 }
