feat(localization): add basic localization

--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -13,9 +13,10 @@
     cursor: pointer;
 }
 
-.themeToggler {
+.togglerContainer {
     align-items: center;
     display: flex;
+    padding: 5px 0;
 }
 
 .light {
