--- a/src/components/atoms/Button/style.scss
+++ b/src/components/atoms/Button/style.scss
@@ -1,3 +1,4 @@
+@use '../../_settings/mixins.scss';
 @import '../../_settings/_variables';
 
 /* Common */
@@ -40,11 +41,9 @@
 
 /* Theme */
 .light {
-    background-color: $primary_light;
-    color: $white;
+    @include mixins.colors('primary_light');
 }
 
 .dark {
-    background-color: $primary_dark;
-    color: $dark;
+    @include mixins.colors('primary_dark');
 }
