--- a/src/components/atoms/ListItem/style.scss
+++ b/src/components/atoms/ListItem/style.scss
@@ -1,3 +1,4 @@
+@use '../../_settings/mixins.scss';
 @import '../../_settings/_variables';
 
 /* Common */
@@ -25,13 +26,13 @@
 
 /* Theme */
 .light, .dark a {
-    color: $dark;
+    @include mixins.colors('primary_dark', ('color'));
 }
 
 .dark, .dark a {
-    color: $white;
+    @include mixins.colors('primary_light', ('color'));
 }
 
 a:hover {
-    color: $error;
+    @include mixins.colors('error_light', ('color'));
 }
