--- a/src/components/atoms/Paragraph/style.scss
+++ b/src/components/atoms/Paragraph/style.scss
@@ -1,15 +1,15 @@
 @use '../../_settings/mixins.scss';
 
 .small {
-    font-size: 13px;
+    font-size: 0.85rem;
 }
 
 .medium {
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .large {
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 .light {
