--- a/src/components/organisms/Header/style.scss
+++ b/src/components/organisms/Header/style.scss
@@ -1,9 +1,10 @@
 @use '../../_settings/mixins.scss';
+@use '../../_settings//functions.scss';
 @import '../../_settings/variables';
 
 .header {
     align-items: center;
-    border-bottom: 1px solid $grey-3;
+    border-bottom: 1px solid functions.nested-map-get($colors, greys, grey-1);
     display: flex;
     height: 50px;
     justify-content: space-between;
@@ -27,5 +28,5 @@
 }
 
 .dark.tip {
-    background-color: $brand;
+    @include mixins.colors('primary_dark', ('background-color'));
 }
