--- a/src/components/atoms/Button/style.scss
+++ b/src/components/atoms/Button/style.scss
@@ -7,7 +7,7 @@
     outline: none;
     cursor: pointer;
     box-shadow: $shadow-5;
-    transition: box-shadow 0.5s ease;
+    transition: all 0.5s ease;
 
     &:hover {
         box-shadow: $shadow-4;
@@ -40,10 +40,34 @@
 }
 
 /* Theme */
-.light {
-    @include mixins.colors('primary_light');
+.light.primary {
+    @include mixins.colors('primary_light') using ($hoverColor) {
+        &:hover {
+            background-color: $hoverColor;
+        }
+    };
 }
 
-.dark {
-    @include mixins.colors('primary_dark');
+.dark.primary {
+    @include mixins.colors('primary_dark') using ($hoverColor) {
+        &:hover {
+            background-color: $hoverColor;
+        }
+    };;
+}
+
+.light.secondary {
+    @include mixins.colors('secondary_light') using ($hoverColor) {
+        &:hover {
+            background-color: $hoverColor;
+        }
+    };;
+}
+
+.dark.secondary {
+    @include mixins.colors('secondary_dark') using ($hoverColor) {
+        &:hover {
+            background-color: $hoverColor;
+        }
+    };;
 }
