feat(card): add Card component

--- a/src/components/_settings/_variables.scss
+++ b/src/components/_settings/_variables.scss
@@ -4,6 +4,7 @@
 $colors: (
     dark: #000,
     white: #fff,
+    orange: rgba(255, 136, 0, 0.959),
     primary: (
         primary_light: #1ec6e0,
         primary_light_background-color: #1ec6e0,
