--- a/src/components/_settings/functions.scss
+++ b/src/components/_settings/functions.scss
@@ -21,9 +21,11 @@
 }
 
 @function increaseTo($size, $multiplier, $dimension: px) {
-    @return #{$size * $multiplier}#{$dimension};
+    $calculated_size: round($size * $multiplier);
+    @return #{$calculated_size}#{$dimension};
 }
 
 @function decreaseTo($size, $denominator, $dimension: px) {
-    @return #{$size / $denominator}#{$dimension};
+    $calculated_size: round($size / $denominator);
+    @return #{$calculated_size}#{$dimension};
 }
