--- a/src/components/_settings/mixins.scss
+++ b/src/components/_settings/mixins.scss
@@ -33,3 +33,17 @@
         }
     }
 }
+
+@mixin forwardTransition($s: 0.5, $p: all) {
+    transition: #{$p} #{$s}s cubic-bezier(0.8, 0.5, 0.6, 1.6);
+}
+
+@mixin defaultTransition($s: 0.5, $p: all) {
+    transition: #{$p} #{$s}s ease;
+}
+
+@mixin burstTransition($s: 0.5, $p: all) {
+    transition: #{$p} #{$s}s cubic-bezier(0.7, -2, 0.8, 1.4);
+}
+
+
