--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -5,11 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>React Boilerplate</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <div id="root"><%- app %></div>
         <div id="modal"></div>
-        <script src="bundle.js"></script>
+        <script src="client.js"></script>
     </body>
 </html>
