upd(imports): update imports paths

--- a/src/client/components/organisms/SignInForm/style.scss
+++ b/src/client/components/organisms/SignInForm/style.scss
@@ -1,4 +1,4 @@
-@import '../../settings//styles//mixins.scss';
+@import '@components/settings//styles//mixins.scss';
 
 .form {
   @include center();
