--- a/.storybook/style.scss
+++ b/.storybook/style.scss
@@ -1,4 +1,4 @@
-@import '../src/client/components/_settings/base';
+@import '@components/_settings/base';
 @import url('https://fonts.googleapis.com/css?family=Lato:400,600');
 
 body {
